feat: Support this role in container builds
Feature: Support running the certificate role during container builds.

Reason: This is particularly useful for building bootc derivative OSes.

Result: The role is now officially supported for image mode builds.

In non-booted environments, create a systemd unit that runs the
`getcert` command(s) on first boot, instead of running it directly. We
unfortunately cannot use `ConditionFirstBoot=` for that
(https://github.com/systemd/systemd/issues/8268) nor the
`ConditionFileNotEmpty=!/etc/machine-id` trick, as certmonger cannot run
that early in the boot sequence, and thus even on the first boot
/etc/machine-id is created earlier. So instead conditionalize the unit
on the commands file and remove that after success.

Adjust assert_certificate_parameters.yml to only check for the generated
certificate in non-buildah environments. For buildah, instead check that
the first-boot unit was created and enabled.

Make tests_many_self_signed.yml and tests_fs_attrs full bootc end-to-end
tests. We don't have to do that for all tests, as the mechanics of the
unit generation are fully generic. The most complicated cases are
creating more than one certificate and changing the permissions
afterwards, which these tests capture.

https://issues.redhat.com/browse/RHEL-93207

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -79,7 +79,7 @@
     - name: Ensure provider service is running
       service:
         name: "{{ __certificate_provider_vars[__certificate_provider].service }}"
-        state: started
+        state: "{{ 'started' if __certificate_is_booted else omit }}"
         enabled: true
       loop: "{{ __certificate_providers }}"
       loop_control:
@@ -119,6 +119,7 @@
     run_after: "{{ item.run_after | default(omit) }}"
     ca: "{{ item.ca | default(omit) }}"
     __header: "{{ __lsr_ansible_managed }}"
+    booted: "{{ __certificate_is_booted }}"
   loop: "{{ certificate_requests }}"
   vars:
     __lsr_ansible_managed: "{{
@@ -138,6 +139,11 @@
     __key_dir: "{{ __certificate_default_directory ~ '/private' }}"
     __ca_dir: "{{ __certificate_default_directory ~ '/certs' }}"
   block:
+    - name: Check if test mode is supported
+      fail:
+        msg: "Test mode is not supported in non-booted mode."
+      when: not __certificate_is_booted
+
     - name: Slurp the contents of the files
       slurp:
         path: "{{ __file }}"
