tests: Cover octal "mode" value
The module API (`set_fs_attributes_if_different()`) declares `mode` as
type `raw` and accepts both symbolic strings and octal numbers. Cover
that case in tests_fs_attrs and update the documentation.

--- a/tests/tests_fs_attrs.yml
+++ b/tests/tests_fs_attrs.yml
@@ -72,7 +72,9 @@
             ca: self-sign
           - name: certid_mode
             dns: www.example.com
-            mode: "0600"
+            # octal numeric value is supported too
+            # yamllint disable rule:octal-values
+            mode: 0o600
             ca: self-sign
 
     - name: Verify each fs_attrs_mode certificate
