test: reset hostname after ipa test
The tests_basic_ipa.yml test has to set a hostname for IPA
to work.  We need to reset the hostname after the test.

Signed-off-by: Rich Megginson <rmeggins@redhat.com>

--- a/tests/tasks/setup_ipa.yml
+++ b/tests/tasks/setup_ipa.yml
@@ -58,6 +58,11 @@
     use: "{{ (__certificate_is_ostree | d(false)) |
       ternary('ansible.posix.rhel_rpm_ostree', omit) }}"
 
+- name: Get hostname
+  command: hostname
+  changed_when: false
+  register: __saved_hostname
+
 - name: Set hostname
   hostname:
     name: ipaserver.test.local
